--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -12,17 +12,43 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+
   </style>
+      <!--Bootstrap Bill--> 
+    
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-white">
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
+  <!-- <div class="d-flex  justify-content-center align-items-center vh-100">
+    <div class="card" style="width: 18rem;">
+      <img src="images/image-qr-code.png" class="card-img-top rounded-4 p-3" alt="qr code">
+      <div class="card-body">
+        <h5 class="card-title">  Improve your front-end skills by building projects</h5>
+        <p class="card-text"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
+    </div>
+  </div>
+   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">David</a>.
+
+-->
+
+  <div class="container text-center">
+    <div class="row">
+      <div class="col bg-info">
+        R2;C1
+      </div>
+      <div class="col-12 col-md-auto bg-warning">
+        R2;C2
+      </div>
+      <div class="col col-l-2 bg-danger">
+        R2;C3
+      </div>
+    </div>
+  </div>
+
   </div>
 </body>
 </html>
